--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         </a>
                     </li>
                     <li class="thumb-client">
-                        <a href=""class="client-link link">
+                        <a href="" class="client-link link">
                         <svg class="icon-client" width="106" height="60">
                             <use href="./images/icons.svg#icon-logo-4"></use>
                         </svg> </a>
@@ -467,8 +467,8 @@
                 <b class="footer-join">Подпишитесь на рассылку</b>
                 <div class="follow">
                     <form class="follow-field">
-                        <input class="email-input" type="email" name="email" id="email">
-                        <label class="email-label" for="email">E-mail</label>
+                        <input class="email-input" type="email" name="email" id="footer-email" placeholder=" ">
+                        <label class="email-label" for="footer-email">E-mail</label>
                     </form>
                     <button type="submit" class="button-follow">Подписаться
                         <svg class="icon-send" width="24px" height="24px">
